Fixed some re-flow issues with collapsed blocks
This closes #58 and closes #67

--- a/src/assetbundles/src/main.scss
+++ b/src/assetbundles/src/main.scss
@@ -92,6 +92,7 @@ body.rtl .buttons-spooned > .btn, body.rtl .buttons-spooned > .btngroup { margin
     -webkit-opacity: 0 !important;
     -moz-opacity: 0 !important;
     opacity: 0 !important;
+    overflow: hidden;
 }
 
 /* tabs */
